--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -1,16 +1,31 @@
 .container {
   max-width: 900px;
+  margin: 200px auto;
 }
 .container h1 {
   color: #fff;
-  font-size: 30px;
+  font-size: 47px;
+  text-align: center;
 }
 .container p {
   color: #fff;
-  font-size: 25px;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 40px;
 }
-.container div {
+.container button {
+  display: block !important;
   padding: 20px 30px;
-  color: #000;
+  color: #fff;
   background-color: #1d354f;
+  border: none;
+  border-radius: 28px;
+  margin: 40px auto;
+  font-size: 22px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+}
+.container button:hover {
+  background: #2980b9;
 }
